# BASS_stand_demo_revision

./: README.md  autostart.txt  demo_sv.sh  install.sh  setup.sh
.git-old/: COMMIT_EDITMSG  config  index  packed-refs
FIFO_DOA/: Makefile  angler.cpp  angler.h  compile.sh  decimator.cpp  decimator.h  dir_of_arr  ffter.cpp  ffter.h  main.cpp  messenger.cpp  messenger.h  powerer.cpp  powerer.h  ravg.h  run  sighandler.h  simplePipe.h  stater.cpp  stater.h  zdaq.cpp  zdaq.h
GPIO_stepper/: Makefile  (+6 more)
libs/: CMakeLists.txt
libs/drone_demo/src/: autopilot_interface.cpp
main/: CMakeLists.txt  README.md
main/libs/: CMakeLists.txt
main/libs/drone_demo/include/: autopilot_interface.h  udp_port.h
main/libs/drone_demo/src/: autopilot_interface.cpp  serial_port.cpp  udp_port.cpp
main/src/: .main.cpp.swo  .mavlink_control.cpp.swp  CMakeLists.txt  detection.cpp  detection.h  main.cpp  main.h  mavlink_control.cpp  mavlink_control.h
main/tools/simple_pipe/: Makefile  README.md  simplePipeIn.cpp  simplePipeOut.cpp
main/tools/simple_pipe/trash/: input.cpp  output.cpp
main/trash/: control_test.py  demo_gui.py  detection.cpp  detection.h
main/trash/for_noha/: a.out  b.out  detection_test.cpp  simplePipe.h  stepper_test.cpp
main/trash/for_noha/GPIO_stepper/: Makefile  README.txt  main.cpp  pigpiod.service
main/trash/for_noha/GPIO_stepper/troubleshoot/: main.cpp  output  test  test.cpp
main/trash/mavlink_ws/: README.md  autopilot_interface.cpp  autopilot_interface.h  generic_port.h  makefile  mavlink_control  mavlink_control.cpp  mavlink_control.h  serial_port.h
(+24 files in other folders)
